[project]
name = "ecgx_st_segment_feature_detection_and_visualisation"
version = "1.0.0"
description = "ECG visualisations highlighting features relevant to ST-elevation interpretation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
   "matplotlib~=3.10.8",
    "neurokit2~=0.2.10",
    "numpy~=2.4.3",
    "pandas~=2.3.3",
    "pydantic~=2.12.5",
    "pywavelets~=1.9.0",
    "pyyaml~=6.0.3",
    "scipy~=1.17.1",
    "wfdb~=4.3.0",
]
